--- a/fs.html
+++ b/fs.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
-<link rel="icon" type="ico" href="IMG/angryarchy.ico">
+<link rel="icon" type="png" href="IMG/software.png">
 <head>
   <link rel="stylesheet" type="text/css" href="DA.css">
   <meta charset="utf-8">
-  <title>Open Source</title>
+  <title>Software</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="estilo.css">
 </head>
@@ -15,26 +15,95 @@
   
 body {
       color: white;
-      background-image: url(IMG/blackgalaxy.jpg);
+      background-image:  url(IMG/stallman.jpg);
       background-size:1024px 1024px;
       min-height:100%;
-      background-size:cover;
+      background-size: cover;     
+      background-repeat: no-repeat;
       background-attachment: fixed;
       }
   </style>
 
 <body>
 
+<style type="text/css">
+    .titulo { 
+           margin: 0px;
+          font-family: "Monospace";
+          color: yellow; 
+          font-size: 30px;
+          text-align: center;
+          background-image: url(IMG/xi.jpg);
+          background-attachment: fixed;
+          background-size: cover;
+
+  }
+  </style>
+
+<style type="text/css">
+    .middle { 
+          margin: 0px;
+          font-family: "Monospace";
+          color: yellow; 
+          font-size: 10px;
+          text-align: center;
+          background-image: url(IMG/black.jpg);
+          background-attachment: fixed;
+          background-size: cover;
+          
+  }
+  </style>
+
+<style type="text/css">
+    .end { 
+          margin: 10px;
+          font-family: "Monospace";
+          color: yellow; 
+          font-size: 10px;
+          text-align: center;
+          background-image: url(IMG/galaxiared.jpg);
+          background-attachment: fixed;
+          background-size: cover;
+          width: 70%;
+  }
+  </style>
+
+<style>
+        a:link {
+            color: darkred;
+            text-decoration: none;
+        }
+  
+        a:visited {
+            color: white;
+        }
+  
+        a:hover {
+            color: darkorange;
+            text-decoration: underline;
+            font-size: 10px;
+            font-family: monospace;
+        }
+  
+        a:active {
+            color: darkred;
+        }
+    </style>
+
+
 <!-- CSS Block End -->  
 
-<div align="center"><h1 class="bloque1">
+<div align="center"><h1 class="titulo">
   <b>Apoya el Software Libre.<b>
 </div></h1></div>
 
 <br>
+<br>
+<br>
+<br>
 
-<div align="center">
-  <b>Doomer usa herramientas opensource/software libre para la creacion de contenido, aqui estaran los links a las herramientas que usa Doomer! </b>  
+<div align="center" class="middle">
+  <b>Doomer usa herramientas <a target="_blank" href= "https://es.wikipedia.org/wiki/Software_de_c%C3%B3digo_abierto">  Open Source/Software Libre </a> para la creacion de contenido, aqui estaran los links a las herramientas que usa Doomer! </b>  
 </div>
 
 <br>
@@ -43,7 +112,7 @@ body {
 
 <div align="center">
 
-<form method="get" action="https://www.gimp.org/">
+<form target="_blank" method="get" action="https://www.gimp.org/">
 
   <button type="submit">
 
@@ -53,13 +122,13 @@ body {
 
   </form>
   
-</div>
+
 
 <br>
 
 <div align="center">
 
-<form method="get" action="https://www.gbstudio.dev/">
+<form target="_blank" method="get" action="https://www.gbstudio.dev/">
 
   <button type="submit">
 
@@ -75,7 +144,7 @@ body {
 
 <div align="center">
 
-<form method="get" action="https://www.debian.org/index.es.html">
+<form target="_blank" method="get" action="https://www.debian.org/index.es.html">
 
   <button type="submit">
 
@@ -91,7 +160,7 @@ body {
 
 <div align="center">
 
-<form method="get" action="https://obsproject.com/es/">
+<form target="_blank" method="get" action="https://obsproject.com/es/">
 
   <button type="submit">
 
@@ -107,7 +176,7 @@ body {
 
 <div align="center">
 
-<form method="get" action="https://www.blender.org/download/releases/2-80/">
+<form target="_blank" method="get" action="https://www.blender.org/download/releases/2-80/">
 
   <button type="submit">
 
@@ -123,7 +192,7 @@ body {
 
 <div align="center">
 
-<form method="get" action="https://www.audacityteam.org/">
+<form target="_blank" method="get" action="https://www.audacityteam.org/">
 
   <button type="submit">
 
@@ -139,7 +208,7 @@ body {
 
 <div align="center">
 
-<form method="get" action="https://es.libreoffice.org/">
+<form target="_blank" method="get" action="https://es.libreoffice.org/">
 
   <button type="submit">
 
@@ -155,7 +224,7 @@ body {
 
 <div align="center">
 
-<form method="get" action="https://godotengine.org/">
+<form target="_blank" method="get" action="https://godotengine.org/">
 
   <button type="submit">
 
@@ -171,7 +240,7 @@ body {
 
 <div align="center">
 
-<form method="get" action="https://libresprite.github.io/#!/">
+<form target="_blank" method="get" action="https://libresprite.github.io/#!/">
 
   <button type="submit">
 
@@ -186,6 +255,70 @@ body {
 <br>
 
 <div align="center">
+
+<form target="_blank" method="get" action="https://inkscape.org/">
+
+  <button type="submit">
+
+    <b>Inkscape!</b>
+
+  </button>
+
+  </form>
+  
+</div>
+
+<br>
+
+<div align="center">
+
+<form target="_blank" method="get" action="https://www.openshot.org/">
+
+  <button type="submit">
+
+    <b>OpenShot Video Editor!</b>
+
+  </button>
+
+  </form>
+  
+</div>
+
+<br>
+
+<div align="center">
+
+<form target="_blank" method="get" action="https://lmms.io/">
+
+  <button type="submit">
+
+    <b>LMMS (Linux MultiMedia Studio)!</b>
+
+  </button>
+
+  </form>
+  
+</div>
+
+<br>
+
+<div align="center">
+
+<form target="_blank" method="get" action="https://openarena.ws/smfnews.php">
+
+  <button type="submit">
+
+    <b>OpenArena!</b>
+
+  </button>
+
+  </form>
+  
+</div>
+
+<br>
+
+<div align="center" class="end">
   <b> Las herramientas de codigo abierto o free software son gratuitas, OBS es una de las herramientas opensource mas usadas por los creadores de contenido en internet!
   <br>
   Hay mas herramientas como estas en la internet, apoya la libertad en el software!</b>
@@ -193,13 +326,18 @@ body {
 
 <br>
 
-<br>
-
-<div align="center">
-<img src="GIF/gatobailando.gif" height="320px" width="360px">
+<div align="center" class="gif">
+<img src="GIF/software.gif" height="200px" width="300px">
 </div>
 
 <br>
 </body>
 
 </html>
+
+
+
+
+
+
+<!-- Soy demasiado perezoso como para programar una página con diseño responsivo -->
