--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   
 body {
       color: white;
-      background-image: url(IMG/space2.jpg);
+      background-image: url(IMG/red.png);
       background-size: cover;     
       background-repeat: no-repeat;
       background-attachment: fixed;
@@ -51,6 +51,13 @@ body {
 <style type="text/css">
     .bloque1 { 
           color: yellow;
+
+  }
+  </style>
+
+<style type="text/css">
+    .fbc { 
+          color: blue;
 
   }
   </style>
@@ -188,7 +195,7 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 <br>
 
 <div align="center">
-<img src="IMG/CatDoom.png" height="150px" width="150px">
+<img src="IMG/CatDoom.png" height="200px" width="200px">
 </div>
 
 <div align="center"> 
@@ -276,12 +283,12 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 <br>
 
 <div align="center">
-<img src="IMG/bar.png" height="100px" width="250px">
+<img src="IMG/gh.png" height="100px" width="250px">
 </div>
 
 <br>
 
-<div align="center"><h1> Video Random </h1></div>
+<div class="bloque1" align="center"><h1> Video Random </h1></div>
 
 <br>
 
@@ -304,14 +311,7 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 </b>
 </div>
 
-<div align="center"><h1> ¡Un extra especial fin de temporada a la orden! </h1></div>
-
-<br>
-
-<div align="center"> 
-<b> EL EXTRA ESPECIAL FIN DE AÑO! UNA LOCURA DE 9 HORAS!
-</b>
-</div>
+<div class="bloque1" align="center"><h1> ¡Un extra especial fin de temporada a la orden! </h1></div>
 
 <br>
 
@@ -321,12 +321,6 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 
 </div>
 
-<div align="center"> 
-<b> -------------------------------------------------------
-</b>
-</div>
-
-<br>
 <br>
 
 <div align="center"> 
@@ -334,7 +328,31 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 </b>
 </div>
 
-<div align="center"><h1> ¡Noticias! </h1></div>
+<div class="bloque1" align="center"><h1> ¡La serie mas reciente! </h1></div>
+
+<br>
+
+<div align="center"> 
+<b> Zoomber-Tron en Zombotron!
+</b>
+</div>
+
+<br>
+
+<div align="center">
+
+<iframe width="360" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?controls=0&amp;list=PLh46r6L9GKHtQYIJyjriVVSbdzlcKPUzK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+</div>
+
+<br>
+
+<div align="center"> 
+<b> -------------------------------------------------------
+</b>
+</div>
+
+<div class="bloque1" align="center"><h1> ¡Noticias! </h1></div>
 
 <div align="center"> 
 <b> Hay un nuevo blog hablando del juego del canal picale aquí y ve el blog del 26 de julio del 2023!
@@ -358,8 +376,12 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 
 <br>
 
+<div class="bloque1" align="center"><h1> Patagonia, Todo un PRO en la edicion! </h1></div>
+
+<br>
+
 <div align="center">
-  <a target="_blank" href= "https://www.youtube.com/channel/UCS7rQOcJApPgyQGyqg4I1_w"> Edit de Patagonia Pro </a> 
+  <a target="_blank" href= "https://www.youtube.com/channel/UCS7rQOcJApPgyQGyqg4I1_w"> Patagonia Channel </a> 
 </div>
 
 <br>
@@ -436,22 +458,6 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
   <button type="submit">
 
     <b>Las Clasicas De Cajon De Doomer</b>
-
-  </button>
-
-  </form>
-  
-</div>
-
-<br>
-
-<div align="center">
-
-<form target="_blank" method="get" action="lore.html">
-
-  <button type="submit">
-
-    <b>El Lore del Multiverso Doomer</b>
 
   </button>
 
@@ -591,7 +597,7 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 
 <br>
 
-<div align="center"> 
+<div class="bloque1" align="center"> 
 <b> Canales Con Calidad Media Baja!
 </b>
 </div>
@@ -604,7 +610,7 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
   <a target="_blank" href= "https://www.youtube.com/channel/UC7qKuyoUo9peGePerG40GNA"> Doritos Pablo </a> 
 </div>
 
-<div align="center"> 
+<div class="bloque1" align="center"> 
 <b> Canales Muy Zombotronicos!
 </b>
 </div>
@@ -630,28 +636,31 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 </b>
 </div>
 
-<div align="left"> 
+<div align="center">
+
+<div class="fbc"> 
 <b> Dejame un comentario desde tu perfil de Facebook!
 </b>
 </div>
 
-<div align="center" id="fb-root"></div>
+<div  id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v17.0" nonce="VIvpmJVz"></script>
 
 
-<div align="center" class="fb-comments" data-href="https://doomer6699.github.io/Doomer.github.io/" data-width="500" data-numposts="6"></div>
+<div class="fb-comments" data-href="https://doomer6699.github.io/Doomer.github.io/" data-width="500" data-numposts="6"></div>
 
+</div>
 
 <div align="center"> 
 <b> -------------------------------------------------------
 </b>
 </div>
 
-<div align="center">
+<div class="bloque1" align="center">
   <b>Only quality trash since 2018.</b>
 
 <div align="center">
-  <b> <a target="_blank" href="banana.html">-DOOMER-</a> <b>
+  <b> <a target="_blank" href="banana.html">-DOOMER6699-</a> <b>
 
 </div>
 
@@ -683,4 +692,4 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 
 
 
-<!-- Un diseñador de paginas web coreano programo esta pagina, si lees esto por favor llama a las autoridades Doomer me tiene secuestrado en su sotano con una computadora de 2gb en RAM y 20gb de disco duro, por favor tengo familia e hijos en mi natal corea del sur, necesito saber que estan bien, creo que doomer no envia mis cartas por correo y esta PC no habre FB, mi nombre es Wong Chu Fo tengo 34 años y naci en corea del sur, la buena corea -->
+<!-- Un diseñador de paginas WEB coreano programo esta pagina, si lees esto por favor llama a las autoridades Doomer me tiene secuestrado en su sotano con una computadora de 2gb en RAM y 20gb de disco duro, por favor tengo familia e hijos en mi natal corea del sur, necesito saber que estan bien, creo que doomer no envia mis cartas por correo y esta PC no habre FB, mi nombre es Chong Fang Lee Mon tengo 34 años y naci en corea del sur, la buena corea -->
