--- a/index.html
+++ b/index.html
@@ -114,8 +114,6 @@ body {
 
 </div> 
 
-
-
 <br> 
 
 <div align="center">
@@ -123,7 +121,17 @@ body {
 </div>
 
 <br>
-<br>    
+
+<div align="center">
+
+
+<div id="sfckw89hw2zqepc3g9ze53le1jly4bex8cr"></div>
+<script type="text/javascript" src="https://counter3.optistats.ovh/private/counter.js?c=kw89hw2zqepc3g9ze53le1jly4bex8cr&down=async" async></script>
+
+
+</div>
+
+<br>
 
 <!-- Si lees esto quiero que sepas que hueles a pan de platano -->
 
