--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ body {
       background-size: cover;     
       background-repeat: no-repeat;
       background-attachment: fixed;
+      cursor: url(CURSOR/caco.png), auto;
       }
   </style>
 
@@ -62,6 +63,18 @@ body {
   }
   </style>
 
+
+<style type="text/css">
+    .tiktok { 
+          color: white;
+          font-size: 30px;
+          cursor: url(CURSOR/pogodemon.png), auto;
+
+
+  }
+  </style>
+
+
 <style type="text/css">
     .bloque2 { 
           color: lightyellow;
@@ -69,11 +82,10 @@ body {
   }
   </style>
 
-<!-- Links Style CSS -->
 
 <style>
         a:link {
-            color: darkred;
+            color: lightgoldenrodyellow;
             text-decoration: none;
         }
   
@@ -86,10 +98,11 @@ body {
             text-decoration: underline;
             font-size: 20px;
             font-family: monospace;
+            cursor: url(CURSOR/demonsmile.png), auto;
         }
   
         a:active {
-            color: darkred;
+            color: purple;
         }
     </style>
 
@@ -169,6 +182,14 @@ body {
   <a target="_blank" href= "https://www.twitch.tv/doomer6699"> Twitch </a> 
 </div>
 
+<div align="center">
+  <a target="_blank" href= "https://soundcloud.com/doomer6699"> SoundCloud </a> 
+</div>
+
+<div align="center">
+  <a target="_blank" href= "https://www.tiktok.com/@doomer6699"> TikTok </a> 
+</div>
+
 <div align="center"> 
 <b> -------------------------------------------------------
 </b>
@@ -194,6 +215,40 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 <div align="center">
 <img src="IMG/CatDoom.png" height="200px" width="200px">
 </div>
+
+<br>
+
+<div align="center"> 
+<b> -------------------------------------------------------
+</b>
+</div>
+
+<div align="center"><h2 class="bloque1"> Otros Canales De Doomer </h2></div>
+
+<div align="center">
+  <a target="_blank" href= "https://www.youtube.com/@MetalNoir"> Metal Noir </a> 
+</div>
+
+<div align="center">
+  <a target="_blank" href= "https://www.youtube.com/@archivosjpgconcaracterserio"> Archivos JPG Con Carácter Serio </a> 
+</div>
+
+<div align="center">
+  <a target="_blank" href= "https://www.youtube.com/@ArchyMP4"> Archivos MP4 Con Carácter Humorístico </a> 
+</div>
+
+<div align="center">
+  <a target="_blank" href= "https://www.youtube.com/@cutecatsbaby3081"> Cute Cats Baby</a> 
+</div>
+
+<div align="center"> 
+<b> -------------------------------------------------------
+</b>
+</div>
+
+
+<br>
+
 
 <div align="center"> 
 <b> -------------------------------------------------------
@@ -571,6 +626,25 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
   
 </div>
 
+<div align="center"> 
+<b> -------------------------------------------------------
+</b>
+</div>
+
+
+
+<br>
+
+<div align="center">
+
+<div class="tiktok" align="center"> 
+<b> Doomer tiene TikTok!
+</b>
+</div>
+
+<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@doomer6699" data-unique-id="doomer6699" data-embed-type="creator" style="max-width: 360px; min-width: 315px;" > <section> <a target="_blank" href="https://www.tiktok.com/@doomer6699?refer=creator_embed">@doomer6699</a> </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
+</div>
+
 <br>
 
 <div align="center"> 
@@ -586,8 +660,6 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 <b> -------------------------------------------------------
 </b>
 </div>
-
-<br>
 
 <br>
 
@@ -622,6 +694,7 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 </div>
 
 <br>
+
 
 <!-- Aquí es donde puedes dejarme tus comentarios! -->
 
