--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ body {
 
 <style type="text/css">
     .fbc { 
-          color: blue;
+          color: yellow;
 
   }
   </style>
@@ -66,7 +66,7 @@ body {
 
 <style type="text/css">
     .tiktok { 
-          color: white;
+          color: yellow;
           font-size: 30px;
           cursor: url(CURSOR/pogodemon.png), auto;
 
@@ -85,16 +85,16 @@ body {
 
 <style>
         a:link {
-            color: lightgoldenrodyellow;
+            color: green;
             text-decoration: none;
         }
   
         a:visited {
-            color: white;
+            color: darksalmon;
         }
   
         a:hover {
-            color: darkorange;
+            color: purple;
             text-decoration: underline;
             font-size: 20px;
             font-family: monospace;
@@ -102,9 +102,21 @@ body {
         }
   
         a:active {
-            color: purple;
+            color: red;
         }
     </style>
+
+  <style type="text/css">
+  
+  .RS {
+      color: white;
+      background-image: url(IMG/blackgalaxy.jpg);
+      background-size: cover;     
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      cursor: url(CURSOR/caco.png), auto;
+      }
+  </style>
 
 <!-- CSS Block End -->
 
@@ -136,11 +148,16 @@ body {
 <br>
 
 <!-- Si lees esto quiero que sepas que hueles a pan de platano -->
+<div class="RS" >
 
 <div align="center"> 
 <b> -------------------------------------------------------
 </b>
 </div>
+
+<div align="center"><h2 class="bloque1"> Todas las redes sociales oficiales de Doomer! </h2></div>
+
+<br>
 
 <div align="center">
   <a target="_blank" href= "https://archy-doomer.itch.io/"> Itch.Io </a> 
@@ -190,9 +207,17 @@ body {
   <a target="_blank" href= "https://www.tiktok.com/@doomer6699"> TikTok </a> 
 </div>
 
+<div align="center">
+  <a target="_blank" href= "https://www.linkedin.com/in/archy-doomer-5350a0287/"> Linkedin </a> 
+</div>
+
+<br>
+
 <div align="center"> 
 <b> -------------------------------------------------------
 </b>
+</div>
+
 </div>
 
 <br>
@@ -246,14 +271,23 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 </b>
 </div>
 
-
 <br>
 
+<div align="center">
+<a target="_blank" href= "https://www.youtube.com/watch?v=UgofBOboAMk"> 
+  <img src="IMG/laura.jpg" height="200px" width="360px">
+</a>
+</div>
+
+<br>
 
 <div align="center"> 
 <b> -------------------------------------------------------
 </b>
 </div>
+
+<br>
+
 
 <div align="center">
   <div align="center"><h2 class="bloque1"> Aquí puedes encontrar a otras versiones de Doomer</h2></div>
@@ -334,8 +368,19 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 
 <br>
 
-<div align="center">
-<img src="IMG/gh.png" height="100px" width="250px">
+<div class="bloque1" align="center"><h1> Porcentaje de HTML5 </h1></div>
+
+<br>
+
+<div align="center"> 
+<img src="IMG/gh.png" height="100px" width="250px"> 
+</div>
+
+<br>
+
+<div align="center"> 
+<b> -------------------------------------------------------
+</b>
 </div>
 
 <br>
@@ -403,14 +448,20 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 
 <div class="bloque1" align="center"><h1> ¡Noticias! </h1></div>
 
+<br>
+
 <div align="center"> 
-<b> Hay un nuevo blog hablando del juego del canal picale aquí y ve el blog del 26 de julio del 2023!
+<b> Hay un nuevo blog hablando del juego del canal, ve el blog del 26 de julio del 2023!
 </b>
 </div>
+
+<br>
 
 <div align="center">
   <a target="_blank" href= "blog.html"> Click aquí para ver el blog del videojuego! </a> 
 </div>
+
+<br>
 
 <div align="center">
 <img src="IMG/PyGame.png" height="150px" width="180px">
@@ -614,6 +665,24 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 
 <div align="center">
 
+<form target="_blank" method="get" action="flashteca.html">
+
+  <button type="submit">
+
+    <b>FlashTeca De Doomer</b>
+
+  </button>
+
+  </form>
+  
+</div>
+
+
+
+<br>
+
+<div align="center">
+
 <form target="_blank" method="get" action="https://youtu.be/9NcPvmk4vfo">
 
   <button type="submit">
@@ -695,13 +764,14 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 
 <br>
 
-
 <!-- Aquí es donde puedes dejarme tus comentarios! -->
 
 <div align="center"> 
 <b> -------------------------------------------------------
 </b>
 </div>
+
+<br>
 
 <div align="center">
 
