--- a/flashteca.html
+++ b/flashteca.html
@@ -57,7 +57,7 @@ body {
           background-size: cover;
           padding: 3px 10px;
           border: white 5px solid;
-          
+          background-attachment: fixed;
           position: fixed;
           height: 60px;
           width: 100%; 
@@ -88,18 +88,31 @@ body {
   }
   </style>
 
+<style type="text/css">
+    .FTD { 
+          font-family: "Optima";
+          color: Yellow; 
+          font-size: 30px;
+          text-align: center;
+  }
+  </style>
+
 <!-- CSS Block End --> 
 
 <body>
 
 <div align="center"><h2 class="titulo">
-  <b>FlashTeca Doomer6699<b>
+  <b>FlashTeca<b>
 </div></h2></div>
 
 <br>
 <br>
 <br>
 <br>
+<br>
+
+<div align="center"><h2 class="FTD"> Las FlashTeca De Doomer6699 </h2></div>
+
 <br>
 
 <div align="center">
