--- a/fs.html
+++ b/fs.html
@@ -318,6 +318,22 @@ body {
 
 <br>
 
+<div align="center">
+
+<form target="_blank" method="get" action="https://sealapk.net/">
+
+  <button type="submit">
+
+    <b>Seal! <br> Descargar Musica y Videos de Redes Sociales</b>
+
+  </button>
+
+  </form>
+  
+</div>
+
+<br>
+
 <div align="center" class="end">
   <b> Las herramientas de codigo abierto o free software son gratuitas, OBS es una de las herramientas opensource mas usadas por los creadores de contenido en internet!
   <br>
