--- a/flashteca.html
+++ b/flashteca.html
@@ -111,7 +111,7 @@ body {
 <br>
 <br>
 
-<div align="center"><h2 class="FTD"> Las FlashTeca De Doomer6699 </h2></div>
+<div align="center"><h2 class="FTD"> La FlashTeca De Doomer6699 </h2></div>
 
 <br>
 
