--- a/index.html
+++ b/index.html
@@ -82,6 +82,13 @@ body {
   }
   </style>
 
+<style type="text/css">
+    .stereo { 
+          color: lightgoldenrodyellow;
+          font-size: 20px;
+
+  }
+  </style>
 
 <style>
         a:link {
@@ -724,6 +731,26 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 <div align="center">
 <img src="GIF/homers.gif" height="320px" width="360px">
 </div>
+
+<div align="center"> 
+<b> -------------------------------------------------------
+</b>
+</div>
+
+<br>
+
+<div class="stereo" align="center"> 
+<b> Tal vez... Solo tal vez... Un dia...
+</b>
+</div>
+
+<br>
+
+<div align="center">
+<img src="IMG/stereo.png" height="140px" width="360px">
+</div>
+
+<br>
 
 <div align="center"> 
 <b> -------------------------------------------------------
