--- a/index.html
+++ b/index.html
@@ -83,9 +83,8 @@ body {
   </style>
 
 <style type="text/css">
-    .stereo { 
-          color: lightgoldenrodyellow;
-          font-size: 20px;
+    .things { 
+          color: lightpink;
 
   }
   </style>
@@ -295,9 +294,14 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 
 <br>
 
-
 <div align="center">
   <div align="center"><h2 class="bloque1"> Aquí puedes encontrar a otras versiones de Doomer</h2></div>
+</div>
+
+<br>
+
+<div align="center">
+  <a target="_blank" href= "https://www.youtube.com/playlist?list=PLh46r6L9GKHsLQljOYzNqDmGrEdCCoKIc"> Doomer Juega Videojuegos Flash! </a> 
 </div>
 
 <div align="center">
@@ -313,7 +317,7 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 </div>
 
 <div align="center">
-  <a target="_blank" href= "https://www.youtube.com/playlist?list=PLh46r6L9GKHv2nIQSi78ltLihzfc5bWPT"> Doomer Prime Creando Dimensiones y a otros Doomers </a> 
+  <a target="_blank" href= "https://www.youtube.com/playlist?list=PLh46r6L9GKHv2nIQSi78ltLihzfc5bWPT"> Doomer Fuera de Canon </a> 
 </div>
 
 <div align="center">
@@ -375,7 +379,7 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 
 <br>
 
-<div class="bloque1" align="center"><h1> Porcentaje de HTML5 </h1></div>
+<div class="bloque1" align="center"><h1> Porcentaje de HTML5 y CSS</h1></div>
 
 <br>
 
@@ -721,6 +725,22 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@doomer6699" data-unique-id="doomer6699" data-embed-type="creator" style="max-width: 360px; min-width: 315px;" > <section> <a target="_blank" href="https://www.tiktok.com/@doomer6699?refer=creator_embed">@doomer6699</a> </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
 </div>
 
+<div align="center"> 
+<b> -------------------------------------------------------
+</b>
+</div>
+
+<br>
+
+<div class="things" align="center" >
+  <details>
+    <summary>Cosas Bonitas <3</summary>
+    <div align="center">
+  <a target="_blank" href= "http://www.free-penguin.org/"> Patrones para un Tux Peluche </a> 
+</div>
+  </details>
+</div>
+
 <br>
 
 <div align="center"> 
@@ -750,6 +770,23 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 
 <div align="center">
   <a target="_blank" href= "https://www.youtube.com/channel/UC7qKuyoUo9peGePerG40GNA"> Doritos Pablo </a> 
+</div>
+
+<div class="bloque1" align="center"> 
+<b> Gente Tierna con Sabor a Molleja <3
+</b>
+</div>
+
+<div align="center">
+  <a target="_blank" href= "https://www.youtube.com/channel/UCS7rQOcJApPgyQGyqg4I1_w"> Patagonia </a> 
+</div>
+
+<div align="center">
+  <a target="_blank" href= "https://www.youtube.com/@CatAnimates/videos"> CatAnimates </a> 
+</div>
+
+<div align="center">
+  <a target="_blank" href= "https://www.youtube.com/@deihanney"> Elaine IA </a> 
 </div>
 
 <div class="bloque1" align="center"> 
