--- a/index.html
+++ b/index.html
@@ -832,6 +832,17 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 
 </div>
 
+<br>
+
+<div align="center"> 
+<b> -------------------------------------------------------
+</b>
+</div>
+
+<div align="center">
+<img src="IMG/DoomerLogo.png" height="100px" width="250px">
+</div>
+
 <div align="center"> 
 <b> -------------------------------------------------------
 </b>
