--- a/index.html
+++ b/index.html
@@ -532,6 +532,22 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 
 <div align="center">
 
+<form target="_blank" method="get" action="links.html">
+
+  <button type="submit">
+
+    <b>Links</b>
+
+  </button>
+
+  </form>
+  
+</div>
+
+<br>
+
+<div align="center">
+
 <form target="_blank" method="get" action="aboutme.html">
 
   <button type="submit">
@@ -688,8 +704,6 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
   
 </div>
 
-
-
 <br>
 
 <div align="center">
@@ -711,8 +725,6 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 </b>
 </div>
 
-
-
 <br>
 
 <div align="center">
@@ -732,25 +744,18 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 
 <br>
 
-<div class="things" align="center" >
-  <details>
-    <summary>Cosas Bonitas <3</summary>
-    <div align="center">
-  <a target="_blank" href= "http://www.free-penguin.org/"> Patrones para un Tux Peluche </a> 
-</div>
-  </details>
-</div>
-
-<br>
-
 <div align="center"> 
 <b> -------------------------------------------------------
 </b>
 </div>
 
+<br>
+
 <div align="center">
 <img src="GIF/homers.gif" height="320px" width="360px">
 </div>
+
+<br>
 
 <div align="center"> 
 <b> -------------------------------------------------------
