--- a/links.html
+++ b/links.html
@@ -15,7 +15,7 @@
   
 body {
       color: floralwhite;
-      background-image: url(IMG/space.jpg);
+      background-image: url(IMG/galaxia93.jpg);
       background-size:1024px 1024px;
       min-height:100%;
       background-size:cover;
@@ -69,7 +69,9 @@ But hey, who's on trial?</b>
   <details>
     <summary>Cosas Bonitas <3</summary>
     <div align="center">
-  <a target="_blank" href= "http://www.free-penguin.org/"> Patrones para un Tux Peluche </a> 
+  <a target="_blank" href= "http://www.free-penguin.org/"> Patrones para un Tux Peluche </a> <br>
+  <a target="_blank" href= "https://www.cubeecraft.com/cubees/tux"> Patrones para un Tux CubeCraft </a> <br>
+  <a target="_blank" href= "https://paperbotz.wordpress.com/2010/05/02/tux-papercraft/"> Patrones para un Tux de PaperCraft </a> <br> 
 </div>
   </details>
 </div>
@@ -91,17 +93,23 @@ But hey, who's on trial?</b>
   <details>
     <summary>Cosas Sobre Gente Cool</summary>
     <div align="center">
+  <b>Aqui puedes encontrar links a paginas de wikipedia sobre gente cool</b>  <br>
   <a target="_blank" href= "https://doomer6699.github.io/Doomer/"/> Archy Doomer 6699</a> <br>
-  <a target="_blank" href= "https://es.wikipedia.org/wiki/Terry_A._Davis"/> Terry Davis </a>
   <a target="_blank" href= "https://es.wikipedia.org/wiki/Richard_Stallman"/> Richard Stallman </a>
   <a target="_blank" href= "https://es.wikipedia.org/wiki/Linus_Torvalds"/> Linus Torvalds </a> <br>
   <a target="_blank" href= "https://es.wikipedia.org/wiki/John_Romero"/> John Romero </a>
   <a target="_blank" href= "https://es.wikipedia.org/wiki/John_Carmack"/> John Carmack</a>
   <a target="_blank" href= "https://es.wikipedia.org/wiki/Adrian_Carmack"/> Adrian Carmack</a>
+  <a target="_blank" href= "https://es.wikipedia.org/wiki/Terry_A._Davis"/> Terry Davis </a>
   <a target="_blank" href= "https://twitter.com/reduzio"/> Juan Linietsky</a> <br>
   <a target="_blank" href= "https://es.wikipedia.org/wiki/Ian_Murdock"/> Ian Murdock</a>
   <a target="_blank" href= "https://es.wikipedia.org/wiki/Daniel_Radcliffe"/> Daniel Radcliffe</a>
-  <a target="_blank" href= "https://youtube.fandom.com/es/wiki/El_Fedelobo"/> Federico Díaz Acuña</a>
+  <a target="_blank" href= "https://youtube.fandom.com/es/wiki/El_Fedelobo"/> Federico Díaz Acuña</a> <br>
+  <a target="_blank" href= "https://es.wikipedia.org/wiki/Sharif_Fern%C3%A1ndez"/> Sharif Fernandez</a>
+  <a target="_blank" href= "https://en.wikipedia.org/wiki/Humberto_Ramos"/> Humberto Ramos</a>
+  <a target="_blank" href= "https://es.wikipedia.org/wiki/Rebecca_Heineman"/> Rebecca Heineman</a> <br>
+  <a target="_blank" href= "https://es.wikipedia.org/wiki/Bruce_Campbell"/> Bruce Campbell</a>
+  <a target="_blank" href= "https://es.wikipedia.org/wiki/Alex_Ross_(ilustrador)"/> Alex Ross</a>
 </div>
   </details>
 </div>
