--- a/index.html
+++ b/index.html
@@ -141,14 +141,14 @@ body {
 <br>
 
 <div align="center">
-  <b>La pagina oficial del canal en HTML5!</b>
+  <b>La página oficial del canal en HTML5!</b>
 
 </div> 
 
 <br> 
 
 <div align="center">
-  <b>Prohibida la entrada a gente que no use desodorante o como minimo la mitad de un limon.<b>
+  <b>¿Me buscaste? ¡Me encontraste! ¡Deja de pedir que yo te busque a ti!.<b>
 </div>
 
 <br>
@@ -161,7 +161,7 @@ body {
 </b>
 </div>
 
-<div align="center"><h2 class="bloque1"> Todas las redes sociales oficiales de Doomer! </h2></div>
+<div align="center"><h2 class="bloque1"> Todas las redes sociales oficiales de Doomer!</h2></div>
 
 <br>
 
@@ -257,7 +257,7 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 <div align="center"><h2 class="bloque1"> Otros Canales De Doomer </h2></div>
 
 <div align="center">
-  <a target="_blank" href= "https://www.youtube.com/@MetalNoir"> Metal Noir </a> 
+  <a target="_blank" href= "https://www.youtube.com/@losdeaths"> Los Deaths! La mejor banda Rock Electronica de su Tierra! </a> 
 </div>
 
 <div align="center">
@@ -416,13 +416,13 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 </b>
 </div>
 
-<div class="bloque1" align="center"><h1> ¡Un extra especial fin de temporada a la orden! </h1></div>
+<div class="bloque1" align="center"><h1> ¡El mas reciente extra especial fin de temporada de Doomer! </h1></div>
 
 <br>
 
 <div align="center">
 
-<iframe width="360" height="315" src="https://www.youtube.com/embed/3BatJyKcpCU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/QTqpSKHNcSw?si=JnFU0QJsZejxK2PF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 </div>
 
@@ -462,21 +462,19 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
 <br>
 
 <div align="center"> 
-<b> Hay un nuevo blog hablando del juego del canal, ve el blog del 26 de julio del 2023!
+<b> No hay muchas nuevas noticias... SOLO UN NUEVO JUEGO GRATUTIO CREADO POR DOOMER!
 </b>
 </div>
 
 <br>
 
 <div align="center">
-  <a target="_blank" href= "blog.html"> Click aquí para ver el blog del videojuego! </a> 
+  <a target="_blank" href= "https://doomer6699.itch.io/zombie-the-game"> Click aquí para jugar Zombie The Game en tu navagador! </a> 
 </div>
 
-<br>
-
-<div align="center">
+<!--<div align="center">
 <img src="IMG/PyGame.png" height="150px" width="180px">
-</div>
+</div> -->
 
 <br>
 
@@ -794,24 +792,9 @@ Con una estetica de pagina de los 2000s/90s, esta pagina esta disponible para to
   <a target="_blank" href= "https://www.youtube.com/@deihanney"> Elaine IA </a> 
 </div>
 
-<div class="bloque1" align="center"> 
-<b> Canales Muy Zombotronicos!
-</b>
-</div>
-
 <div align="center">
-  <a target="_blank" href= "https://www.youtube.com/channel/UC-15IARUAZpUHgQyccKww5w"> El Zombotronico </a> 
+  <a target="_blank" href= "https://www.youtube.com/@arylopez29"> Morita Matrioshka </a> 
 </div>
-
-<div align="center">
-  <a target="_blank" href= "https://www.youtube.com/channel/UCF990gdXwa8TDiCPik6erzA"> •CRiS‹h1›Pro </a> 
-</div>
-
-<div align="center">
-  <a target="_blank" href= "https://www.youtube.com/@sfpro6978"> •SFpro </a> 
-</div>
-
-<br>
 
 <!-- Aquí es donde puedes dejarme tus comentarios! -->
 
